--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body, html {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
-    color: #fff;
   }
   
   /* Hero Section */
@@ -12,10 +11,11 @@ body, html {
     height: 100vh;
     width: 100%;
     background: url('./assets/hero4.jpg') no-repeat center center/cover;
+    
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     position: relative;
+    color: #fff;
   }
   
   /* Dark Overlay */
@@ -26,7 +26,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Overlay for visibility */
+    background: rgba(0, 0, 0, 0.25);
     z-index: 1;
   }
   
@@ -35,7 +35,9 @@ body, html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
+
+    min-width: 90%;
+    margin: 20px auto;
     position: relative;
     z-index: 2; /* Above overlay */
   }
@@ -47,7 +49,8 @@ body, html {
   .nav-links {
     display: flex;
     list-style: none;
-    gap: 20px;
+    gap: 1rem;
+    padding: 0px;
   }
   
   .nav-links li a {
@@ -63,14 +66,14 @@ body, html {
   
   /* Hero Content */
   .hero-content {
+    position: relative;
     z-index: 2; /* Above overlay */
     padding: 0 50px;
     max-width: 600px;
-    margin-bottom: 50px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-height: 500px;
+    margin: auto 0px;
+
   }
   
   .hero-content h1 {
