--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 /* General Styles */
+*{
+  box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     padding: 0;
@@ -117,12 +121,33 @@ body, html {
     line-height: 1.5;
   }
 
+/* Style the play button */
+.play-button {
+  position: fixed; /* Fix the button to the screen */
+  bottom: 20px; /* Distance from the bottom of the screen */
+  right: 20px; /* Distance from the right of the screen */
+  z-index: 1; /* Ensure the button is on top of other elements */
+  background-color: #08306b; /* Button background color */
+  color: #f7fbff; /* Button text color */
+  border: none; /* Remove default button border */
+  padding: 10px 20px; /* Add some padding to the button */
+  font-size: 16px; /* Button font size */
+  cursor: pointer; /* Change the cursor to a pointer on hover */
+  border-radius: 5px; /* Add a slight rounded corner to the button */
+  width: 100px;
+}
+
+.play-button:hover {
+  background-color: #08519c; /* Change the button background color on hover */
+}
+
 /* Image Slider Section */
 .image-slider-container {
   height: 100vh; /* Full viewport height */
   display: flex;
   justify-content: space-evenly;
   flex-direction: column; 
+  background-color: #f7fbff;
 }
 
 .image-slider {
@@ -146,4 +171,61 @@ body, html {
   background-size: cover;
   background-position: center;
   border-radius: 2rem;
+}
+
+/* Story Section Styling */
+.story-section-one{
+  height: 100vh;
+  box-sizing: border-box;
+  background-color: #f7fbff;
+}
+
+.story-section-container {
+  max-width: 90%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.story-section-title {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold; 
+  padding: 1.5rem;
+  margin:0;
+}
+
+.story-content {
+  display: flex;
+  gap: 2rem;
+  align-items: flex-start;
+
+  max-height:100%;
+}
+
+.image-container {
+  position: relative;
+  max-width: 50%; /* Half of the container */
+}
+
+.angled-image {
+  width: 100%;
+  /* transform: rotate(-45deg); Angle the first image */
+  position: absolute; /* Position it absolutely */
+  top: 0; /* Align to the top */
+  left: 0; /* Align to the left */
+  z-index: 1; /* Ensure it is on top */
+}
+
+.stacked-image {
+  width: 100%;
+  margin-top: 50px; /* Adjust margin to create space for the angled image */
+  z-index: 0; /* Ensure it is below the angled image */
+}
+
+.note-section {
+  max-width: 50%; /* Half of the container */
+  padding: 20px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
