--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -13,15 +13,13 @@
         mask-image: url(./assets/ink2.webp);
     }
 
-    /* .hero::after {
+    .hero::after {
         content: '';
         position: absolute;
         inset: 0;
-        background: rgba(241, 248, 255, 0.05); 
-        backdrop-filter: blur(1px);
-        -webkit-backdrop-filter: blur(10px); 
+        background: rgba(241, 248, 255, 0.4); 
         z-index: 1;
-      } */
+      }
       
 
       .hero-content {
@@ -42,15 +40,15 @@
     }
     
     .hero-content h1 {
-        font-size: 2rem;
-        color: #fff;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+        font-size: 3rem;
+        color: #f7fbff;
+        text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
         margin-bottom: 10px;
     }
     
     .hero-content p {
         font-size: 1rem;
-        color: #fff;
+        color: #f7fbff;
         text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
         margin-top: 0;
     }
@@ -59,7 +57,6 @@
         justify-content: center;
         gap: 1rem;
     }
-    
 
     /*Image Slider*/
     .slides{
