--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body, html {
   position: absolute;
   inset: 0;
   background-image: url(./assets/flowerBackground.png);
-  opacity: 0.5;
+  opacity: 0.3;
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -303,6 +303,7 @@ inset: 0;
   height: 90%;
   margin: auto;
   max-width: 50%; /* Half of the container */
+  overflow: auto; /* Enables scrolling when content overflows */
   padding: 20px;
   background: rgba(255, 255, 255, 0.2); /* Semi-transparent white */
   border-radius: 8px;
@@ -334,7 +335,7 @@ inset: 0;
   position: absolute;
   inset: 0;
   background-image: url(./assets/flowerTwo.jpg);
-  opacity: 0.3;
+  opacity: 0.1;
   background-size: cover;
   background-position: center;
   z-index: -1;
